# university-practical-exam

./: .envrc.sample  .gitignore  Pipfile  README.adoc  pyproject.toml
docs/: schema.adoc
js_toolchain/: package.json
practical_exam/practical_exam/: settings.py
