[tool.poetry]
name        = "university-practical-exam"
version     = "0.1.0"
description = ""
authors     = []
license     = "MIT OR Apache-2.0"

[tool.poetry.dependencies]
python                   = "^3.9"
Django                   = "^3.2.6"
django-pgtrigger         = "^2.4.0"
django-widget-tweaks     = "^1.4.8"
numpy                    = "^1.21.1"
psycopg2                 = "^2.8.6"
pygad                    = "^2.16.0"
django-livereload-server = { version = "^0.3.2", optional = true }

[tool.poetry.dev-dependencies]
black                 = { version = "^21.8b0", allow-prereleases = true }
mypy                  = { version = "^0.910", allow-prereleases = true }
django-stubs          = { version = "^1.8.0", allow-prereleases = true }
types-python-dateutil = { version = "^0.1.6", allow-prereleases = true }

[build-system]
requires      = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
live_reload = [ "django-livereload-server" ]
