[tool.poetry]
name        = "university-practical-exam"
version     = "0.1.0"
description = ""
authors     = []
license     = "MIT OR Apache-2.0"

[tool.poetry.dependencies]
python                   = "^3.9"
Django                   = "^4.0"
django-pgtrigger         = "^2.4.0"
django-widget-tweaks     = "^1.4.9"
numpy                    = "^1.22.0"
psycopg2                 = "^2.9.3"
pygad                    = "^2.16.1"
django-livereload-server = { version = "^0.4", optional = true }

[tool.poetry.dev-dependencies]
black                 = { version = "^21.12b0", allow-prereleases = true }
mypy                  = { version = "^0.931", allow-prereleases = true }
django-stubs          = { version = "^1.9.0", allow-prereleases = true }
types-python-dateutil = { version = "^2.8.7", allow-prereleases = true }

[build-system]
requires      = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
live_reload = [ "django-livereload-server" ]
